gramatica.txt
Programa : Declaracoes Programa 
         | Declaracoes

Declaracoes : Declaracao_Variavel
            | Funcao

Funcao : Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES Conjunto_Declaracoes FIM

Funcao : Tipo IDENTIFICADOR ABREPARENTES Conjunto_Parametros FECHAPARENTES FIM

Declaracao_Variavel : Tipo DOISPONTOS Variaveis

Variaveis : Variaveis VIRGULA IDENTIFICADOR
          | IDENTIFICADOR 

Conjunto_Parametros : Tipo DOISPONTOS IDENTIFICADOR VIRGULA Conjunto_Parametros 
                    | Tipo DOISPONTOS IDENTIFICADOR
                    | empty 

Tipo : INTEIRO
     | FLUTUANTE

Conjunto_Declaracoes : Conjunto_Declaracoes Declaracao
                     | Declaracao

Declaracao : Declaracao_Se
           | Declaracao_Repita
           | Declaracao_Atribuicao
           | Declaracao_Leia
           | Declaracao_Escreva
           | Declaracao_Variavel
           | Declaracao_Retorno

Declaracao_Se : SE Conjunto_Expressao ENTAO Conjunto_Declaracoes FIM
              | SE Conjunto_Expressao ENTAO Conjunto_Declaracoes SENAO Conjunto_Declaracoes FIM

Declaracao_Repita : REPITA Conjunto_Declaracoes ATE Conjunto_Expressao

Declaracao_Atribuicao : IDENTIFICADOR ATRIBUICAO Conjunto_Expressao

Declaracao_Leia : LEIA ABREPARENTES IDENTIFICADOR FECHAPARENTES

Declaracao_Escreva : ESCREVA ABREPARENTES Conjunto_Expressao FECHAPARENTES

Declaracao_Retorno : RETORNA ABREPARENTES Conjunto_Expressao FECHAPARENTES

Conjunto_Expressao : Expressao_ID
                   | Expressao_Aritmetica
                   | Expressao_Comparacional
                   | Expressao_Parenteses
                   | Expressao_Numero
                   | Chama_Funcao

Parametros : Parametros VIRGULA Conjunto_Expressao
           | Conjunto_Expressao

Chama_Funcao : IDENTIFICADOR ABREPARENTES Parametros FECHAPARENTES
             | IDENTIFICADOR ABREPARENTES FECHAPARENTES

Expressao_ID : Expressao_ID VIRGULA IDENTIFICADOR
             | IDENTIFICADOR

Expressao_Aritmetica : Conjunto_Expressao SOMA Conjunto_Expressao
                     | Conjunto_Expressao SUBTRACAO Conjunto_Expressao
                     | Conjunto_Expressao MULTIPLICACAO Conjunto_Expressao
                     | Conjunto_Expressao DIVISAO Conjunto_Expressao

Expressao_Comparacional : Conjunto_Expressao MAIOR Conjunto_Expressao
                        | Conjunto_Expressao MENOR Conjunto_Expressao
                        | Conjunto_Expressao MAIORIGUAL Conjunto_Expressao
                        | Conjunto_Expressao MENORIGUAL Conjunto_Expressao
                        | Conjunto_Expressao IGUALDADE Conjunto_Expressao

Expressao_Parenteses : ABREPARENTES Conjunto_Expressao FECHAPARENTES

Expressao_Numero : NUMERO
